# ShotPerfect

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SETUP.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.github/: FUNDING.yml
.github/workflows/: release.yml
bettershot-landing/: package.json  pnpm-lock.yaml
bettershot-landing/app/: layout.tsx  page.tsx
bettershot-landing/components/: download-dropdown.tsx  faq-section.tsx  features.tsx  how-to-download.tsx  installation-instructions.tsx  new-release-promo.tsx  sticky-footer.tsx  testimonials.tsx
bettershot-landing/components/home/: hero.tsx
bettershot-landing/components/ui/: hero-video-dialog.tsx
bettershot-landing/lib/: analytics.ts  downloads.ts
scripts/: generate-release-notes.sh  get-release-notes.sh
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  commands.rs  image.rs  lib.rs  main.rs  screenshot.rs  utils.rs
src/components/: ImageEditor.css  ImageEditor.tsx  RegionSelector.css  RegionSelector.tsx  SettingsIcon.tsx  UpdateDialog.tsx
src/components/editor/: AnnotationCanvas.tsx  AnnotationToolbar.tsx  (+6 more)
src/hooks/: index.ts  useEditorSettings.ts  useEditorState.ts  usePreviewGenerator.ts
src/lib/: annotation-utils.ts  asset-registry.ts  auto-process.ts  canvas-utils.ts  ocr.ts  onboarding.ts
src/stores/: editorStore.test.ts  editorStore.ts  index.ts
src/test/: setup.ts
src/types/: annotations.ts
(+11 files in other folders)
